--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
           webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
         },
       },
-      social: {
-        likeCount: 99999, //99999가 최대입니다
-        commentCount: 99999, //99999가 최대입니다
-        sharedCount: 99999, //99999가 최대입니다
-      },
       buttons: [
         {
           title: '모바일청첩장 보기',
+          link: {
+            mobileWebUrl: 'https://pastelletter.com/Y7I3hyNYE3',
+            webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
+          },
+        },
+      ],
+      buttons: [
+        {
+          title: '백신접종유무 알리기',
           link: {
             mobileWebUrl: 'https://pastelletter.com/Y7I3hyNYE3',
             webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
