--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     Kakao.Link.sendDefault({
       objectType: 'feed',
       content: {
-        title: '이재용♡장지연 결혼합니다.',
-        description: '여기를 눌러 링크를 확인하세요.',
+        title: '이재용♡장지연.',
+        description: '2022.02.27. SUN 3:30 PM 저희 결혼합니다.',
         imageUrl:
           'https://d36q5o2seairtd.cloudfront.net/client/upload/20211126/1637933515021',
         link: {
@@ -33,13 +33,11 @@
             webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
           },
         },
-      ],
-      buttons: [
         {
-          title: '백신접종유무 알리기',
+          title: '백신접종여부 회신하기',
           link: {
-            mobileWebUrl: 'https://pastelletter.com/Y7I3hyNYE3',
-            webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
+            mobileWebUrl: '<iframe src='http://naver.me/xcWbpSbC' width='800px' height='1500px' frameborder='0' scrolling='auto'></iframe>',
+            webUrl: '<iframe src='http://naver.me/xcWbpSbC' width='800px' height='1500px' frameborder='0' scrolling='auto'></iframe>',
           },
         },
       ],
