--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     Kakao.Link.sendDefault({
       objectType: 'feed',
       content: {
-        title: '이재용♡장지연.',
+        title: '이재용♡장지연',
         description: '2022.02.27. SUN 3:30 PM 저희 결혼합니다.',
         imageUrl:
           'https://d36q5o2seairtd.cloudfront.net/client/upload/20211126/1637933515021',
@@ -33,6 +33,8 @@
             webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
           },
         },
+        ],
+      [
         {
           title: '백신접종여부 회신하기',
           link: {
