--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
           },
         },
+        {
+          title: '백신접종여부 회신하기',
+          link: {
+            mobileWebUrl: 'https://form.office.naver.com/form/responseView.cmd?formkey=NmViNzM5ZGQtNGE2Ni00MWJiLWFmZjItYWFiZjliMGVmYTQ4&sourceId=urlshare',
+            webUrl: 'https://form.office.naver.com/form/responseView.cmd?formkey=NmViNzM5ZGQtNGE2Ni00MWJiLWFmZjItYWFiZjliMGVmYTQ4&sourceId=urlshare',
+          },
+        },
       ],
     })
   }
