--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             webUrl: 'https://pastelletter.com/Y7I3hyNYE3',
           },
         },
+      ],
+      buttons: [
         {
           title: '백신접종여부 회신하기',
           link: {
